# dcurves

./: .coverage  .gitignore  .pylintrc  220417_questions.txt  230206_pylint_output.txt  CHANGELOG.md  CHANGELOG_old.md  LICENSE  NEWS.md  README.md  Untitled.ipynb  dcurves.html  index.html  mkdocs.yml  notes.txt  poetry_code_clean.sh  poetry_env_onestep.sh  pyenv_install_verisons.sh  pyproject.toml  pytest.ini  requirements.txt  run_dcurves.py  run_unittests.sh  search.js  setup.py  test_python_versions.sh  tox.ini  tox_notes.txt  working_requirements.tsv
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: 241215_github-actions  250103_github-actions  github-actions.yaml  pdoc-documentation-site.yaml  poetry-actions.yaml  test-workflow.yml  uv-actions.yml
.tox/py310/: .tox-info.json
.tox/py34/: .tox-info.json
.tox/py35/: .tox-info.json
.tox/py36/: .tox-info.json
.tox/py38/: .tox-info.json
data/: df_binary.csv  df_case_control.csv
dcurves/: __init__.py  _validate.html  _validate.py  binary_dca.py  dca.html  dca.py  load_test_data.html  load_test_data.py  net_intervention_avoided.py  plot_graphs.html  plot_graphs.py  prevalence.html  prevalence.py  risks.html  risks.py  scratch.py  surv_dca.py  validate.py
dcurves.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dcurves/data/: dca_tut_bin_int_df.csv  dca_tut_int_marker_risk_scores.csv  dca_tut_int_risk_df.csv  dca_tut_r_stdca_coxph_df.csv  df_case_control.csv  r_bctr_2.csv  r_bctr_3.csv  r_bin_dca_result_1.csv  r_bin_dca_result_2.csv  r_bin_dca_result_3.csv  r_case1_results.csv  r_case2_results.csv  r_dca_famhistory.csv  r_simple_surv_dca_result_df.csv  surv_risk_test_df.csv
dcurves/test/: __init__.py  test_dca.py  test_validate.py
dcurves/test/data/: df_surv.csv
dcurves/test/resources/r_results/univ_canc_famhist/: net_benefit.csv
docs/: CHANGELOG.md  CHANGELOG_old.md  README.md  WORKFLOW.md  how-to-guides.md  reference.md
jupyter_notebooks/: Untitled.ipynb  Untitled2.ipynb  dca_construction.ipynb  dca_scratch.ipynb  dca_scratch_3.ipynb  dca_scratch_backup.ipynb  dca_scratch_data_path.ipynb  net_interventions_avoided.ipynb  plot_smoothing.ipynb  plotting_tests.ipynb  running_binary_dca.ipynb  running_dcapy.ipynb  running_dcurves.ipynb  test_bw_feature.ipynb
jupyter_notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled2-checkpoint.ipynb  dca_construction-checkpoint.ipynb  dca_scratch-checkpoint.ipynb  dca_scratch_backup-checkpoint.ipynb  dca_scratch_data_path-checkpoint.ipynb  net_interventions_avoided-checkpoint.ipynb  running_binary_dca-checkpoint.ipynb  running_dcurves-checkpoint.ipynb
newsfragments/: 13.bugfix  14.improvement  15.improvement  18.addition  18.feature  18.improvement  18.removal  19.improvement  20.bugfix  20.improvement  21.improvement  6.feature
notebooks/: dca_construction.ipynb  plotting_tests.ipynb
scripts/: examples.py  run_dcurves.py  run_examples.sh  run_unit_tests.sh  scratch.py  start_python.sh
test/: __init__.py  test_dca.py  test_validate.py
test/resources/r_results/univ_canc_famhist/: interventions_avoided.csv
tests/: .coverage  __init__.py  common_test_utils.py  conftest.py  load_test_data.py  test_actual_dca.py  test_binary_consequences.py  test_binary_dca.py  test_competing_risks.py  test_create_initial_df.py  test_dca.py  test_dca_input_checks.py  test_dca_risks.py  test_dca_stats.py  test_dca_tutorial.py  test_harms.py  test_load_test_data.py  test_net_intervention_avoided.py  test_non_dcurves_code.py  test_optional_gridlines.py  test_plot_saving.py  test_plot_smoothing.py  test_plotting.py  test_plotting_core.py  test_plotting_options.py  test_prevalence.py  test_scratch.py  test_shishir_simdata.py  test_surv_consequences.py  test_surv_dca.py  test_survival_dca.py  test_test_consequences.py  test_validate.py
tests/benchmark_data/: dca_tut_r_stdca_coxph_pr_failure18_test_consequences.csv  df_binary.csv  df_cancer_dx.csv  df_cancer_dx2.csv  df_surv.csv  r_case2_results.csv  r_case3_results.csv  r_dca_famhistory.csv  r_simple_binary_dca_result_df.csv  r_simple_surv_tpfp_calc_df.csv
tomls/: pyproject.toml
