[tool.poetry]
name = "dcurves"
version = "1.1.2"
description = "A Python package for Decision Curve Analysis to evaluate prediction models, molecular markers, and diagnostic tests."
authors = ["shaunporwal <shaun.porwal@gmail.com>", "rohansingh <singhrohan@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
lifelines = "~0.27.7"
matplotlib = "^3.7.1"
pandas = ">=1.5.3,<3.0.0"
statsmodels = "0.14.4"
typing = "~3.7.4.3"
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocs-material = "^9.0.14"
setuptools = "^68.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "~7.2.1"
jupyterlab = "~3.6.1"
tox = "^4.4.6"
pytest-cov = "^4.0.0"
black = "^23.1.0"
pylint = "^3.3.1"
pytest-mock = "^3.11.1"
tomli = "^2.0.1"
scikit-learn = "^1.3.2"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[repositories]
pypi = {url = "https://pypi.org/"}

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:_pytest.assertion.rewrite",
    "ignore::DeprecationWarning:numpy.core",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:lifelines",
    "ignore::DeprecationWarning:patsy",
    "ignore:numpy.core.einsumfunc:DeprecationWarning",
    "ignore:pkg_resources is deprecated:DeprecationWarning",
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated:DeprecationWarning"
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
