[tool.poetry]
name = "dcurves"
version = "1.1.3"
description = "A Python package for Decision Curve Analysis to evaluate prediction models, molecular markers, and diagnostic tests."
authors = [
    "Shaun Porwal <shaun.porwal@gmail.com>",
    "Rohan Singh <singhrohan@outlook.com>",
]
maintainers = ["Shaun Porwal <shaun.porwal@gmail.com>"]
readme = "README.md"
homepage = "https://decisioncurveanalysis.org"
repository = "https://github.com/MSKCC-Epi-Bio/dcurves"
documentation = "https://github.com/MSKCC-Epi-Bio/dcurves/blob/main/docs/CHANGELOG.md"
keywords = [
    "decision-curve-analysis",
    "decision-curves",
    "net-benefit",
    "clinical",
    "consequences",
    "andrew-vickers",
    "shaun-porwal",
    "rohan-singh",
]
include = ["images/simple_binary_dca.png"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
lifelines = "~0.27.7"
matplotlib = "^3.7.1"
statsmodels = "0.14.4"
typing = "~3.7.4.3"
setuptools = "^75.6.0"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "~7.2.1"
jupyterlab = "~3.6.1"
tox = "^4.4.6"
pytest-cov = "^4.0.0"
black = "^24.10.0"
pylint = "^3.3.1"
pytest-mock = "^3.11.1"
tomli = "^2.0.1"
scikit-learn = "^1.3.2"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:_pytest.assertion.rewrite",
    "ignore::DeprecationWarning:numpy.core",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:lifelines",
    "ignore::DeprecationWarning:patsy",
    "ignore:numpy.core.einsumfunc:DeprecationWarning",
    "ignore:pkg_resources is deprecated:DeprecationWarning",
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated:DeprecationWarning",
]
