[project]
name = "dcurves"
version = "1.1.5"
description = "A Python package for Decision Curve Analysis to evaluate prediction models, molecular markers, and diagnostic tests."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Shaun Porwal", email = "shaun.porwal@gmail.com" },
  { name = "Rohan Singh", email = "singhrohan@outlook.com" },
]
maintainers = [{ name = "Shaun Porwal", email = "shaun.porwal@gmail.com" }]
keywords = [
  "decision-curve-analysis",
  "decision-curves",
  "net-benefit",
  "clinical",
  "consequences",
  "andrew-vickers",
  "shaun-porwal",
  "rohan-singh",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9, <3.13"
dependencies = [
  "lifelines>=0.27.8",
  "matplotlib>=3.7.1",
  "statsmodels>=0.14.5",
  "typing~=3.7.4.3",
  "setuptools>=75.6.0",
  "pandas>=2.2.3",
  "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.2.2",
  "jupyterlab~=3.6.1",
  "tox>=4.4.6",
  "pytest-cov>=4.0.0",
  "black>=24.10.0",
  "pylint>=3.3.1",
  "pytest-mock>=3.14.0",
  "tomli>=2.0.1",
  "scikit-learn>=1.6.1",
  "autopep8>=2.3.1",
  "pathlib>=1.0.1",
]

[project.urls]
homepage = "https://decisioncurveanalysis.org"
repository = "https://github.com/MSKCC-Epi-Bio/dcurves"
documentation = "https://github.com/MSKCC-Epi-Bio/dcurves/blob/main/docs/CHANGELOG.md"

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning:_pytest.assertion.rewrite",
  "ignore::DeprecationWarning:numpy.core",
  "ignore::DeprecationWarning:pkg_resources",
  "ignore::DeprecationWarning:lifelines",
  "ignore::DeprecationWarning:patsy",
  "ignore:numpy.core.einsumfunc:DeprecationWarning",
  "ignore:pkg_resources is deprecated:DeprecationWarning",
  "ignore:datetime.datetime.utcnow\\(\\) is deprecated:DeprecationWarning",
]

[tool.hatch.build.targets.wheel]
include = ["dcurves/**/*.py", "dcurves/data/*.csv", "public/simple_binary_dca.png"]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"
