[tool.poetry]
name = "dcurves"
version = "1.0.5"
description = 'Python package implementing Decision Curve Analysis method to evaluate prediction models, molecular markers,  and diagnostic tests'
authors = ["shaunporwal <shaun.porwal@gmail.com>"]
readme = "docs/README.md"

[tool.poetry.dependencies]
python = "~3.11.1"
lifelines = "~0.27.4"
matplotlib = "^3.5.2"
pandas = "~1.5.3"
statsmodels = "~0.13.2"
typing = "~3.7.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "~7.2.1"
jupyterlab = "~3.6.1"
pytest-cov = "^4.0.0"
black = "^23.1.0"
pylint = "^2.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
